decided to use bootstrao

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,21 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 html,
 body {
-  font-family: "Montserrat", sans-serif;
-  line-height: 1.4;
-}
-ul {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-.container {
-  max-width: 1200px;
-  padding: 0 1rem;
-  margin: auto;
+  font-family: "Montserrat", sans-serif !important;
 }
